# IdeaBRD

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: backend-build.yaml  frontend-build.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_collaborators.py  0003_identities.py  0004_git_sync.py
backend/app/: access.py  auth.py  config.py  db.py  github.py  gitsync.py  ideafile.py  main.py  models.py  realtime.py  schemas.py
backend/app/routers/: auth.py  collaborators.py  ideas.py  repos.py  todos.py
backend/tests/: conftest.py  test_auth_identities.py  test_collaboration.py  test_github.py  test_gitsync.py  test_health_auth.py  test_ideas_todos.py
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _env.tpl  _helpers.tpl  backend-deployment.yaml  backend-eso.yaml  backend-ingress.yaml  backend-service.yaml  backend.yaml  cnpg.yaml  frontend-deployment.yaml  frontend-ingress.yaml  frontend-service.yaml  frontend.yaml  ingress.yaml  middleware.yaml  migrate-job.yaml  pg-su-eso.yaml  pg-user-eso.yaml  postgres-cluster.yaml  secret.yaml  secretstore.yaml
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  auth.svelte.ts  realtime.ts  types.ts
frontend/src/lib/components/: AccountPanel.svelte  (+9 more)
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
(+1 files in other folders)
